# mathics3-debugger

./: .gitignore  Makefile  README.rst  pyproject.toml  setup.py
pymathics/debugger/: __init__.py  __main__.py  repl.py  tracing.py  version.py
pymathics/debugger/lib/: core.py  format.py  repl.py  stack.py
pymathics/debugger/processor/: cmdproc.py  frame.py  subcmd.py
pymathics/debugger/processor/command/: alias.py  backtrace.py  base_cmd.py  base_submgr.py  break.py  continue.py  down.py  eval.py  frame.py  help.py  info.py  mathics.py  mathics3.py  mock.py  printelement.py  python.py  reload.py  set.py  show.py  trepan3k.py  up.py
pymathics/debugger/processor/command/info_subcmd/: args.py  frame.py  program.py
pymathics/debugger/processor/command/set_subcmd/: args.py-notyet  autoeval.py  event.py  highlight.py  style.py  width.py
pymathics/debugger/processor/command/show_subcmd/: event.py
pymathics/trepan/: __init__.py  __main__.py  api.py-notyet  tracing.py  version.py
pymathics/trepan/lib/: core.py  format.py  repl.py  sighandler.py  stack.py
pymathics/trepan/processor/: cmdproc.py  frame.py  subcmd.py
pymathics/trepan/processor/command/: __init__.py  alias.py  backtrace.py  base_cmd.py  base_submgr.py  break.py-notyet  continue.py  down.py  eval.py  frame.py  handle.py  help.py  info.py  kill.py  mathics3.py  mock.py  printelement.py  python.py  reload.py  set.py  show.py  trepan3k.py  up.py
pymathics/trepan/processor/command/info_subcmd/: args.py  break.py  frame.py  program.py  signals.py
(+6 files in other folders)
