[build-system]
requires = [
    "setuptools>=70.0.0", # CVE-2024-38335 recommends this
]
build-backend = "setuptools.build_meta"

[project]
name = "Mathics3-trepan"
description = "Mathics3 Trepan debugger"
dependencies = [
    "Mathics3>=7.0.0.dev0",
    "trepan3k>=1.3.0",
    "mathics-pygments",
]
requires-python = ">=3.8"
readme = "README.rst"
license = {text = "GPL-3.0-only"}
keywords = ["Mathematica", "Wolfram", "Interpreter", "Shell", "Math", "CAS"]
maintainers = [
    {name = "Mathics3 Group"},
]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Interpreters",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://mathics.org/"

[tool.setuptools.dynamic]
version = {attr = "pymathics.trepan.version.__version__"}
